# Incident-Service-API

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: README.md  ci-cd.yml
alembic/: env.py
alembic/versions/: 001.py
app/: __init__.py  config.py  dependencies.py  main.py
app/application/: __init__.py  use_cases.py
app/domain/: __init__.py  entities.py  enums.py  exceptions.py  interfaces.py
app/infrastructure/: database.py  models.py  repository.py  unit_of_work.py
app/presentation/: routes.py  schemas.py
scripts/: README.md  check_code.sh  precommit.sh  test_ci.sh
tests/: conftest.py  test_create_incident.py  test_get_incident_by_id.py  test_get_incidents.py  test_update_incident_status.py
tools/: README.md  mypy.ini  ruff.toml  ty.toml
