[project]
name = "incident-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.104.0",
    "mypy>=1.18.2",
    "pre-commit>=3.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.5",
    "sqlalchemy[asyncio]>=2.0.0",
    "ty>=0.0.1a27",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "pytest-cov>=4.1.0",
]
